# reviewbar

./: README.md  index.html  log.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: log.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: builder.rs  commands.rs  config.rs  github.rs  lib.rs  main.rs  paths.rs  poller.rs  shell.rs  state.rs  tray.rs  worktree.rs
